; ModuleID = '/home/carl/AnghaBench/libgit2/tests/ignore/extr_status.c_assert_ignored_.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/ignore/extr_status.c_assert_ignored_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"expected != is_ignored\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i8*, i32)* @assert_ignored_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_ignored_(i32 %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* @g_repo, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @git_status_should_ignore(i32* %9, i32 %10, i8* %11)
  %13 = load i8*, i8** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @cl_git_expect(i32 %12, i32 0, i8* %13, i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  %18 = zext i1 %17 to i32
  %19 = load i32, i32* %9, align 4
  %20 = icmp ne i32 %19, 0
  %21 = zext i1 %20 to i32
  %22 = icmp eq i32 %18, %21
  %23 = zext i1 %22 to i32
  %24 = load i8*, i8** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @clar__assert(i32 %23, i8* %24, i32 %25, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %26, i32 1)
  ret void
}

declare dso_local i32 @cl_git_expect(i32, i32, i8*, i32) #1

declare dso_local i32 @git_status_should_ignore(i32*, i32, i8*) #1

declare dso_local i32 @clar__assert(i32, i8*, i32, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
